    override any settings obtained via dhcp/whatever.  See #48277.

    Updated bootmisc to dump the output of `dmesg` to /var/log/dmesg.  
    This way users have an 'after-boot' log of their dmesg saved 
    somewhere useful #55421.

    Added the 'eend' back to depscan.sh since the script starts with a 
    call to 'ebegin' #59694.

  04 Oct 2004; Mike Frysinger <vapier@gentoo.org>:

    More (I mean a LOT more) services.  This takes care of #44458, 
    #52881 #55939 #58997 #66166 #66297.  Gleaned many from the IANA 
    list/Fedora/FreeBSD/Debian.

    Change the test for /proc/cmdline from -e to -r.  On grsecurity 
    based systems for example, the file may exist, but not be readable 
    by non-root users (patch by Ned Ludd).

  03 Oct 2004; Mike Frysinger <vapier@gentoo.org>:

    Add support for NFSv4 from #25106 to the netmount script.  Don't 
    try to fsck / if the root is a remote filesystem (like NFS) #36624.

    Update the fs_passno values in the default fstab to match the 
    settings suggested by the manpage #37314.  Make checkroot respect 
    a fs_passno setting of 0 when dealing with / #39212.  Change 
    default / filesystem type to ext3 instead of xfs #42670.

    Re-order the arguements to mount to match POSIX requirements #66225.

    Don't pipe swapon in localmount to /dev/null and ignore return 
    codes anymore.  A swapon that works shows no output #39834.

  02 Oct 2004; Mike Frysinger <vapier@gentoo.org>:

    Break up the COL/COLOR code properly this time.  Not all serial 
    consoles can handle adjusting to the end of the line, so let's not 
    bother running stty at all anymore.  This should fix up #32453.

  30 Sep 2004; Mike Frysinger <vapier@gentoo.org>:

    Disable cryptfs by default in the conf.d file.  Also cleanup 
    the output generated in localmount/checkfs/halt.sh for dm-crypt.
    Add an extra check so that cryptfs is only run when the conf.d
    file exists as well as /bin/cryptsetup.
